--- a/style.css
+++ b/style.css
@@ -3,45 +3,38 @@ body{
     font-family: tahoma, arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: black;
+    /* background-color: black; */
 }
 
-#principal{
-    width: 99%;
-    margin: 20px auto;
-    margin-bottom: 0;
+main{
+    background-image: url("./imgs/background.jfif");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
 .header-top{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 40vw;
+    margin-bottom: 0;
     height: 120px;
     background-color: #414149e5;
-    position: relative;
 }
 
 .logo{
-    height: 130px;
-    width: 140px;
+    padding: 10px 0 0 0;
+    height: 100px;
+    width: 110px;
     margin: 0px 0 0 135px;
 }
 
 .header-nav{
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    gap: 6vw; 
 }
 
-.header-nav ul{
-    margin: 0;
-    padding: 0;
-}
-
-.header-nav li{
-    list-style: none;
-    display: inline-block;
-    margin: 0 20px 0 0;
-    padding: 38px;
-}
 .header-nav a{
     color: #9ea3aa;
     text-decoration: none;
@@ -55,32 +48,21 @@ body{
     color: white;
 }
 
-.fundo{
-    width: 100%;
+.sobre{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
 }
 
-.about{
-    padding: 50px 100px;
-    text-align: center;
-}
 
-.about h1{
+.sobre h1{
     font-size: 36px;
     color: #cecece;
 }
 
-.about p{
+.sobre p{
     font-size: 16px;
     line-height: 2;
     color: #cecece;
-}
-
-.gallery{
-    padding: 0 100px 50px 100px;
-    color: #cecece;
-}
-.gallery-card{
-    width: 32%;
-    float: left;
-    text-align: center;
 }
